Wed May  1 02:16:11 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (testmandirs): Include the subdirectory name
	  in the "Updating index cache" message.

Wed May  1 02:05:02 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_store.c: Make sure the check for whether a replace is
	  necessary in situation (3) behaves as it did before the multi key
	  format changes.

	* libdb/db_lookup.c (copy_if_set, dash_if_unset): Constify
	  arguments.
	* libdb/db_storage.h: Likewise for prototypes.
	* src/convert_name.c (gripe_converting_name): name should be const.
	* src/manp.c (get_catpath): suffix should be const.

Wed May  1 00:14:20 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (match_in_directory): Close the directory after
	  reading through it.

Wed May  1 00:02:53 BST 2002  Colin Watson  <cjwatson@debian.org>

	Case-(in)sensitivity in database lookups should work properly now.

	* libdb/db_lookup.c (gripe_bad_multi_key): New function.
	  (make_multi_key): Don't lowercase page any more - that happens
	  elsewhere.
	  (list_extensions): We now return names/extensions, not just
	  extensions.
	  (dblookup): Multi keys are now formed as "RealCase.1" rather than
	  just "1". Add a new MATCH_CASE flag which, if set, makes sure the
	  RealCase part matches. Otherwise the database lookup is
	  case-insensitive.
	  (dblookup_exact, dblookup_all): Pass through a match_case flag for
	  the above.
	* libdb/db_delete.c (dbdelete): Cope with new multi key format.
	* libdb/db_store.c (dbstore): Construct the multi key from the
	  original case of the name rather than the lowercased version. Add
	  the basename to the multi keys created here, as above.
	* src/man.c (display_database): Pass match_case flag through to the
	  database lookup.
	  (try_db): Likewise.
	* src/check_mandirs.c (test_manfile): Make sure lookups are
	  case-sensitive.
	* src/straycats.c (check_for_stray): Likewise.
	* src/whatis.c (get_whatis): Likewise.